we tried real hard

--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
 
     <div class="container">
 
-        <div class="section about-me">
-            <h3>About Me</h3>
-            <p> Insert about me text here. </p>
-        </div>
-
 
         <div class="section dog-photos">
             <h3>Photos of my Dog</h3>
@@ -28,21 +23,27 @@
                 <img src="images/dog1.jpg" alt="Dog 1" width="200px" id="dog-1">
             </a>
             <div class="clr"></div>
-            <a href="images/dog2.jpg">
-                <img src="images/dog2.jpg" alt="Dog 2" width="200px" id="dog-2">
-            </a>
-            <div class="clr"></div>
-            <a href="images/dog3.jpg">
-                <img src="images/dog3.jpg" alt="Dog 3" width="200px" id="dog-3">
+            <a href="images/dog5.jpg">
+                <img src="images/dog5.jpg" alt="Dog 5" width="200px" id="dog-5">
             </a>
             <div class="clr"></div>
             <a href="images/dog4.jpg">
                 <img src="images/dog4.jpg" alt="Dog 4" width="200px" id="dog-4">
             </a>
             <div class="clr"></div>
-            <a href="images/dog5.jpg">
-                <img src="images/dog5.jpg" alt="Dog 5" width="200px" id="dog-5">
+            <a href="images/dog3.jpg">
+                <img src="images/dog3.jpg" alt="Dog 3" width="200px" id="dog-3">
             </a>
+            <div class="clr"></div>
+            <a href="images/dog2.jpg">
+                <img src="images/dog2.jpg" alt="Dog 2" width="200px" id="dog-2">
+            </a>
+            
+        </div>
+
+        <div class="section about-me">
+            <h3>About Me</h3>
+            <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit voluptatem repellendus voluptas quisquam beatae voluptate. Pariatur molestias, aut, esse distinctio unde minus vitae et aliquam mollitia dolor praesentium omnis cupiditate. </p>
         </div>
 
 
@@ -60,11 +61,11 @@
                 <img src="images/diving3.jpg" alt="Diving 3" width="300px">
             </a>
         </div>
-
-        <footer id="main-footer">
-            <p>Copyright &copy; 2022, Skye </p>
-        </footer>
     </div>
+
+    <footer id="main-footer">
+        <p>Copyright &copy; 2022, Skye </p>
+    </footer>
 
     <div style="margin-top:500px;"></div>
     
